# contax

./: .gitignore  .travis.yml  README.md  README.rst  pyproject.toml
contax/backend/contacts/: contact.json  models.py  serializers.py  tests.py  urls.py  views.py
contax/backend/contacts/migrations/: 0001_initial.py  0002_auto_20200209_1613.py  0003_auto_20200209_1710.py  0004_auto_20200209_1714.py  0005_auto_20200215_1132.py
contax/backend/contacts/tests/: conftest.py  test_models.py  test_views.py
contax/backend/server/: settings.py  urls.py
contax/frontend/: package-lock.json  package.json
contax/frontend/src/: App.vue  api.js  main.js
contax/frontend/src/components/: ContactEdit.vue  Index.vue
contax/frontend/src/components/addresses/: Addresses.vue
contax/frontend/src/components/contacts/: ContactEdit.vue  Contacts.vue
contax/frontend/src/router/: index.js
