[tool.poetry]
name = "contax"
version = "0.1.0"
description = ""
authors = ["Henry Marment <henrymarment@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
djangorestframework = "^3.10"
django-cors-headers = "^3.1"
python-dotenv = "^0.11.0"
psycopg2 = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit = "^2.0.1"
wemake-python-styleguide = "^0.13.4"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
